--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "@components/*": ["./src/Shared/components/*"],
+      "@hooks/*": ["./src/Shared/hooks/*"],
+    }
   },
   "include": ["src"]
 }
